fix(theme): fix code line number alignment in safari

--- a/packages/theme/src/client/modules/blog/styles/article-item.scss
+++ b/packages/theme/src/client/modules/blog/styles/article-item.scss
@@ -166,7 +166,7 @@
     pre {
       margin: 0.85rem 0;
       padding: 1.25rem 1.5rem;
-      line-height: 1.4;
+      line-height: 1.375;
     }
 
     // line number fix
